--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -124,7 +124,9 @@ shell:
   #multiplier: 3
 
 # Font configuration
-#font:
+font:
+  # Point size
+  size: 16.0
   # Normal (roman) font face
   #normal:
     # Font family
@@ -170,9 +172,6 @@ shell:
 
     # The `style` can be specified to pick a specific face.
     #style: Bold Italic
-
-  # Point size
-  #size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
